--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,19 @@
   padding: 14px 16px;
   text-decoration: none;
 }
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+
 body {
 /* background-image: url("/Users/janinegeorg/Desktop/coding_course/group_project/saintespresso.jpg"); */
 background-color: black;
@@ -46,4 +59,3 @@ div.overlay{
   background-image : url("/Users/janinegeorg/Desktop/coding_course/group_project/saintespresso.jpg" );
   background-size: 100% 100%;
 }
-
