--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-.navbar {
+div.navbar {
   overflow: hidden;
   background-color: #333;
   font-family: Arial;
 }
-.navbar a {
+div.navbar a {
   float: left;
   font-size: 16px;
   color: white;
@@ -15,6 +15,11 @@ body {
 /* background-image: url("/Users/janinegeorg/Desktop/coding_course/group_project/saintespresso.jpg"); */
 background-color: black;
 color: white;
+}
+
+h1 {
+  text-align: center;
+  font-family: Arial
 }
 
 li {
@@ -47,3 +52,6 @@ div.overlay{
   background-size: 100% 100%;
 }
 
+.map {
+  display: flex;
+}
