Text alignment changed

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -36,7 +36,8 @@ h1 {
   font-family: Arial;
 }
 p {
-  text-align: center;
+  /* text-align: centre; */
+  vertical-align: top;
   font-family: Arial;
 }
 
