--- a/css/styles2.css
+++ b/css/styles2.css
@@ -45,7 +45,10 @@ color: white;
 h1 {
   text-align: center;
   font-family: Arial
-
+}
+p{
+  text-align: center;
+  font-family: Arial
 }
 overlay {
 position: absolute;
