--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,16 @@ div.navbar a {
   text-decoration: none;
 }
 
+.topnav a:hover {
+  background-color: #ffff;
+  color: black;
+  padding: 14px 16px;
+}
+.topnav a.active {
+  background-color: #333;
+  color: white;
+}
+
 .dropdown .dropbtn {
   font-size: 16px;
   border: none;
